Bug 71488 - RadeonSI :Regression: Massive Desktop corruption observed on starting the X server
Summary: RadeonSI :Regression: Massive Desktop corruption observed on starting the X s...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: high critical
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 73946 74927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-11 11:59 UTC by samit vats
Modified: 2014-03-04 08:25 UTC (History)
6 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.log (63.63 KB, text/plain)
2013-11-11 11:59 UTC, samit vats
Details
dmesg (73.67 KB, text/plain)
2013-11-11 12:01 UTC, samit vats
Details
screenshot (525.40 KB, image/jpeg)
2013-11-11 12:30 UTC, samit vats
Details
possible fix (2.00 KB, patch)
2014-02-17 19:24 UTC, Alex Deucher
Details | Splinter Review

Description samit vats 2013-11-11 11:59:07 UTC
Created attachment 89018 [details]
xorg.log

Driver Stack Details:
=====================

1)    Kernel-3.11.0-12-generic
2)    drm-2.4.46
3)    Mesa-10.0.0-devel(git-6c6f4aa-11thNov)  
4)    Xorg-server-1.14.3
5)    xf86-video-ati- git
6)    glamor-0.5.1
7)    LLVM-3.3

System Configuration:
=====================

Asic         : Cape Veede Pro-683F
O.S.         : Ubuntu-13.10 (64 bit)

Observation:
============

Massive Desktop corruption observed on starting the Xserver.
Desktop becomes unusable as unable launch any application(Screenshot attached
Comment 1 samit vats 2013-11-11 12:01:16 UTC
Created attachment 89019 [details]
dmesg
Comment 2 samit vats 2013-11-11 12:30:26 UTC
Created attachment 89021 [details]
screenshot
Comment 3 Alex Deucher 2013-11-11 13:41:01 UTC
Does updating libdrm to 2.4.47 help?
Comment 4 Michel Dänzer 2013-11-12 03:32:15 UTC
If the new libdrm doesn't help, does

 Option "ColorTiling2D" "off"

or

 Option "ColorTiling" "off"

work around the problem?
Comment 5 samit vats 2013-11-12 11:17:17 UTC
Upgraded to libdrm 2.4.47 and the issue is still reproduced.

The issue is not observed with Option "ColorTiling2D" "off", however it reduces the driver performance i.e. for game Openarena the FPS is reduced by approx 30% with Color Tiling disabled.
Comment 6 Tom Stellard 2013-11-16 02:35:35 UTC
What was the last working version of Mesa?  Are you able to bisect?
Comment 7 samit vats 2013-11-18 11:51:18 UTC
Here are the regression details

Pass : xf86-video-ati-0c921edf(31st Oct)
Fail : xf86-video-ati-e4cd0f43(4th Nov)

with Mesa-10.0.0-devel(git-6c6f4aa)
Comment 8 Alexander Tsoy 2014-01-18 11:26:01 UTC
I have the same issue with Cape Verde PRO [Radeon HD 7750]

software versions:

media-libs/mesa-10.0.2
sys-devel/llvm-3.4
sys-kernel/hardened-sources-3.12.6-r4
x11-drivers/xf86-video-ati-9999 (latest git))
x11-libs/glamor-9999 (latest git)
x11-libs/libdrm-2.4.50
Comment 9 Alexander Tsoy 2014-01-18 11:35:06 UTC
(In reply to comment #7)
> Here are the regression details
> 
> Pass : xf86-video-ati-0c921edf(31st Oct)
> Fail : xf86-video-ati-e4cd0f43(4th Nov)

e4cd0f43 is a commit which enables tiling on SI by default and it's not a real regression. I didn't tried ColorTiling2D until today, so I'm not sure if it worked in the past (btw, same corruption with xf86-video-ati-7.2.0 and ColorTiling2D enabled).
Comment 10 Pali Rohár 2014-01-22 20:25:15 UTC
I have same problem with card AMD Radeon HD 7730. When glamor is enabled I see same screen corruption (as in attached screenshot) in Xserver (also in login screen KDM). When glamor is disabled everything is OK, but very very slow. Problem is still present in mesa, drm, xorg ati - all from git from end of December. Problem is also in Fedora live CD which has enabled radeonsi and glamor by default. Enabling/Disabling ColorTiling and ColorTiling2D did not help I still saw same problem.
Comment 11 Michel Dänzer 2014-01-23 03:17:37 UTC
(In reply to comment #10)
> Enabling/Disabling ColorTiling and ColorTiling2D did not help I still saw same
> problem.

This contradicts comment #5, so it's probably not the same issue. Please file your own report with all the necessary information.
Comment 12 Pali Rohár 2014-01-23 15:06:15 UTC
So it looks like it is problem as reported in bug #60879
Comment 13 Alex Deucher 2014-02-17 19:23:48 UTC
*** Bug 74927 has been marked as a duplicate of this bug. ***
Comment 14 Alex Deucher 2014-02-17 19:24:58 UTC
Created attachment 94233 [details] [review]
possible fix

This patch should fix the issues.
Comment 15 Alex Deucher 2014-02-17 19:25:39 UTC
*** Bug 73946 has been marked as a duplicate of this bug. ***
Comment 16 Sgt. Garcia 2014-02-17 21:02:38 UTC
(In reply to comment #14)
fixed on OLAND. thanks.
Comment 17 Alexander Tsoy 2014-02-18 21:12:38 UTC
Fixed on VERDE too. Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.